--- a/nodedemo/public/stylesheets/style.css
+++ b/nodedemo/public/stylesheets/style.css
@@ -21,3 +21,24 @@ a{
     margin-right: 10px;
     margin-bottom: 1em;
 }
+#room-list{
+    float: right;
+    width: 100px;
+    height: 300px;
+    overflow: auto;
+}
+#room-list div{
+    border-bottom: 1px solid #eeeeee;
+}
+#room-list div:hover{
+    background-color: #dddddd;
+}
+#send-message{
+    width: 700px;
+    margin-bottom: 1em;
+    margin-right: 1em;
+}
+
+#help{
+    font:10px 'Lucida Grande',Helvetica,Arial,sans-serif;
+}
